[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/user interface/backgrounds/sea_background.png" type="Texture" id=1]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/user interface/themes/CherryBombOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/sprites/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/user interface/UserInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/games/Game2.gd" type="Script" id=12]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_111.png" type="Texture" id=13]
[ext_resource path="res://src/autoload/SpawnTimer.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/autoload/FishSpawnTimer.gd" type="Script" id=15]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_109.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/kenney_fish-pack/PNG/Retina/fishTile_110.png" type="Texture" id=21]

[sub_resource type="AudioStreamMicrophone" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 34.75, 388.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 188.5, 379.5 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 3 )

[node name="Game2" type="Control"]
margin_right = 1080.0
margin_bottom = 1920.0
theme = ExtResource( 2 )
script = ExtResource( 12 )

[node name="UserInterfaceLayer" type="CanvasLayer" parent="."]
layer = 99

[node name="UserInterface" parent="UserInterfaceLayer" instance=ExtResource( 6 )]

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="MicrophoneInput" type="AudioStreamPlayer" parent="."]
stream = SubResource( 7 )
autoplay = true
bus = "Record"

[node name="FishSpawnTimer" parent="." instance=ExtResource( 14 )]
wait_time = 5.0
script = ExtResource( 15 )

[node name="GameArea" type="Area2D" parent="."]
position = Vector2( 540, 1916 )
collision_layer = 0
collision_mask = 2
space_override = 3

[node name="GameCollision" type="CollisionShape2D" parent="GameArea"]
position = Vector2( -504.75, -384.5 )
shape = SubResource( 8 )

[node name="AlertArea" type="Area2D" parent="."]
position = Vector2( 774, 1593 )
collision_layer = 0
collision_mask = 2

[node name="AlertCollision" type="CollisionShape2D" parent="AlertArea"]
position = Vector2( -219.5, -64.5 )
shape = SubResource( 10 )

[node name="Countdown1" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 20 )

[node name="Countdown2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 21 )

[node name="Countdown3" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 13 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 192, 1722 )

[node name="BreatheAlert" type="Label" parent="."]
visible = false
anchor_left = 0.152778
anchor_top = 0.142969
anchor_right = 0.152778
anchor_bottom = 0.142969
margin_left = -102.5
margin_top = -36.5
margin_right = 102.5
margin_bottom = 36.5
custom_colors/font_color = Color( 0.913725, 0.0352941, 0.0352941, 1 )
custom_fonts/font = SubResource( 11 )
text = "SOFFIA!"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OkAlert" type="Label" parent="."]
visible = false
anchor_left = 0.152778
anchor_top = 0.142969
anchor_right = 0.152778
anchor_bottom = 0.142969
margin_left = -116.0
margin_top = -36.5
margin_right = 116.0
margin_bottom = 36.5
custom_colors/font_color = Color( 0.145098, 0.564706, 0.0117647, 1 )
custom_fonts/font = SubResource( 11 )
text = "OTTIMO!"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="body_entered" from="GameArea" to="." method="_on_GameArea_body_entered"]
[connection signal="body_entered" from="AlertArea" to="." method="_on_AlertArea_body_entered"]
[connection signal="body_exited" from="AlertArea" to="." method="_on_AlertArea_body_exited"]
